# terminal-voxel-ray-tracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  makefile
include/: camera.hpp  clock.hpp  config.hpp  intersection_information.hpp  material.hpp  object.hpp  ray.hpp  renderer.hpp  terminal.hpp  vector.hpp
src/: camera.cpp  clock.cpp  clock.hpp  config.cpp  config.hpp  intersection_information.hpp  main.cpp  material.cpp  object.cpp  object.hpp  pixelbuffer.cpp  pixelbuffer.hpp  ray.hpp  renderer.cpp  renderer.hpp  terminal.cpp  terminal.hpp  vector.cpp
src/define/: camera.cpp  clock.cpp  config.cpp  material.cpp  octree.cpp  pixelbuffer.cpp  point_cloud.cpp  renderer.cpp  terminal.cpp  vector.cpp
src/include/: camera.hpp  clock.hpp  config.hpp  intersection_information.hpp  material.hpp  octree.hpp  pixelbuffer.hpp  point_cloud.hpp  ray.hpp  renderer.hpp  terminal.hpp  vector.hpp  vertex.hpp
